--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,14 @@
 <link href="css.css">
 <div class="container">
+    <div class="sidebar">
+        <div class="sidebaritem selected">
+            <img class="icon" src="/2djsge/src/cursor.png">
+        </div>
+        <div class="sidebaritem">
+            <img class="icon" src="/2djsge/src/select.png">
+        </div>
+    </div>
     <canvas class="main-canvas" id="main-canvas"></canvas>
 </div>
 <link rel="stylesheet" href="css.css">
 <script type="module" src="js.js"></script>
-<script>
-    function resize(test){
-
-    }
-</script>
